# git2-lfs

./: Cargo.toml  README.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml
src/: batch.rs  cache.rs  client.rs  error.rs  filter.rs  lib.rs  oid.rs  pointer.rs  repo.rs
tests/: e2e.rs  integration.rs  protocol_verification.rs
